# brainmass

./: .gitignore  CONTEXT.md  README.md  changelog.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt
.github/workflows/: CI-daily.yml  CI.yml  Publish.yml  deploy-docs.yml
brainmass/: __init__.py  _base.py  _characterization_goldens.json  _common.py  _coupling.py  _fhn.py  _fhn_test.py  _forward_model.py  _forward_model_test.py  _hopf.py  _hopf_test.py  _horn.py  _jansen_rit.py  _jansen_rit2.py  _jansen_rit_test.py  _kuramoto.py  _leadfield.py  _linear.py  _linear_test.py  _noise.py  _noise_test.py  _qif.py  _qif_test.py  _sl.py  _sl_test.py  _typing.py  _utils.py  _vdp.py  _vdp_test.py  _version.py  _wilson_cowan.py  _wilson_cowan_test.py  _wong_wang.py  _wong_wang_test.py  _xy_model.py  _xy_model_test.py  branch_coverage_test.py  characterization_test.py  coombes_byrne.py  coombes_byrne_test.py  (+70 more)
brainmass/_data/: _generate.py  example_connectome.npz  example_signal.npz
brainmass/horn/: __init__.py  connections.py  sequential.py  sequential_test.py  step.py  step_test.py  variants.py  variants_test.py
brainmass/jansen_rit/: __init__.py  connectivity.py  network.py  network_test.py  step.py  step_test.py  tr.py  tr_test.py
docs/: api.rst  conf.py  faq.ipynb  faq.rst  index.rst  roadmap.md
docs/_templates/: functiontemplate.rst
docs/api/: coupling.rst  forward.rst  horn.rst  index.rst  models.rst  noise.rst  orchestration.rst  utilities.rst
docs/apis/: coupling.rst  forward.rst  index.rst  models.rst  orchestration.rst  utilities.rst
docs/concepts/: architecture_overview.ipynb  coupling_and_delays.ipynb  from_activity_to_signals.ipynb  index.rst  what_is_a_neural_mass_model.ipynb  why_differentiable.ipynb
docs/data_driven/: index.ipynb  roadmap.md
docs/developer/: architecture.ipynb  architecture.rst  building_a_data_driven_workflow.ipynb  contributing.rst  creating_a_coupling.ipynb  creating_an_objective.ipynb  creating_models.ipynb  creating_models.rst  documentation.ipynb  documentation.rst  extending_noise.ipynb  index.rst  (+3 more)
examples/: 00-hopf-osillator.ipynb  00-hopf-osillator.py  000-getting-started.ipynb  000-getting-started.py  000-hopf-osillator.ipynb  001-wilson-wowan-osillator.ipynb  001-wilson_cowan_limit_cycle.ipynb  001-wilsonwowan-osillator.ipynb  002-fhn-osillator.ipynb  002-hopf-osillator.ipynb  003-jansen-rit-model.ipynb  003-jansenrit-single-node-simulation.ipynb  003-jansenrit_single_node_simulation.ipynb  003-jansenrit_single_node_simulation.py  004-2d-oscillator_tutorial.ipynb  004-fhn-oscillator.ipynb  005-stuart-landau-oscillator.ipynb  006-van-der-pol-oscillator.ipynb  007-oscillator-comparison.ipynb  008-horn-dynamics.ipynb  009-wong-wang-model.ipynb  01-wilsonwowan-osillator.ipynb  01-wilsonwowan-osillator.py  010-hopf-oscillator.ipynb  010-parameter-exploration.ipynb  010-parameter-exploration.py  010-qif-model.ipynb  011-nevergrad-optimization.ipynb  011-nevergrad-optimization.py  011-stuart-landau-oscillator.ipynb  011-wilson-cowan-all-variants.ipynb  012-scipy-optimization.ipynb  012-scipy-optimization.py  012-van-der-pol-oscillator.ipynb  013-oscillator-comparison.ipynb  014-fhn-oscillator.ipynb  02-fhn-osillator.ipynb  02-fhn-osillator.py  020-momi2023.ipynb  020-momi2023.py  (+49 more)
(+71 files in other folders)
