[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
exclude = [
    "docs*",
    "build*",
    "dist*",
    "dev*",
    "examples*",
    "brainmass.egg-info*",
    "brainmass/__pycache__*",
    "brainmass/__init__.py"
]

# Ship the bundled example datasets (small, license-clean, synthetic ``.npz``
# files under ``brainmass/_data/``) inside the wheel so ``brainmass.datasets``
# works with no external download.
[tool.setuptools.package-data]
brainmass = ["_data/*.npz"]


[project]
name = "brainmass"
description = "Whole-brain brain modeling for differentiable neural mass models."
readme = 'README.md'
requires-python = '>=3.11'
authors = [{ name = 'BranMass Developers', email = 'chao.brain@qq.com' }]
classifiers = [
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries',
]
keywords = [
    'neural mass model',
    'brain modeling',
    'rate model',
    'mean field model',
    'neuroscience',
    'computational neuroscience',
    'brain simulation',
]
dependencies = [
    'numpy',
    'jax',
    'brainstate>=0.2.9',
    'brainunit',
    # braintools 0.2.0's init.param double-prepends the batch axis under
    # batched init_state (gives (B, B, N) instead of (B, N)); pin below it
    # until the upstream fix is released.
    'braintools<0.2.0',
]
dynamic = ['version']


[tool.flit.module]
name = "brainmass"


[project.urls]
homepage = 'https://github.com/chaobrain/brainmass'
repository = 'https://github.com/chaobrain/brainmass'
documentation = 'https://brainx.chaobrain.com/brainmass/'
"Bug Tracker" = 'https://github.com/chaobrain/brainmass/issues'
"Source Code" = 'https://github.com/chaobrain/brainmass'


[project.optional-dependencies]
testing = [
    'pytest', 'jax',
]
# Plotting helpers in ``brainmass.viz`` lazily import matplotlib; install this
# extra (``pip install brainmass[viz]``) to use them.
viz = [
    'matplotlib',
]
cpu = [
    'jax',
]
cuda12 = [
    'jax[cuda12]',
]
cuda13 = [
    'jax[cuda13]',
]
tpu = [
    'jax[tpu]',
]

[tool.setuptools.dynamic]
version = { attr = "brainmass._version.__version__" }


[tool.coverage.run]
branch = true
source = ["brainmass"]
omit = [
    "*_test.py",
    "*/conftest.py",
    "*/_version.py",
    # One-off provenance script that regenerates the bundled ``.npz`` data; it
    # is never imported at runtime (the committed data files are what ship).
    "*/_data/_generate.py",
]

[tool.coverage.report]
# CI fails if total coverage drops below this gate (goal-04 testing rigor).
fail_under = 90
show_missing = true
precision = 2
